Wed Jun 27 00:10:33 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a fatal bug in private message sending and reception
	  encryption and decryption when using private message keys.
	  The implementation was incorrect and did not follow the
	  specification.  It causd that some of the message were
	  lost since it did not use the sending and receiving keys
	  as the protocol suggests.  This has been fixed and will cause
	  incompatibilities with older clients when sending private
	  message encrypted with private message keys.  Affected files
	  lib/silcclient/client_prvmsg.c, lib/silcclient/client_keyagr.c
	  and various other in Irssi SILC Client.

	  Added `responder' boolean argument to the functions
	  silc_client_add_private_message_key[_ske] to indicate when
	  the key is added as responder or initiator of the key
	  negotiation.

Tue Jun 26 19:23:07 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Removed the silc_ske_check_version function and created
	  a SilcSKECheckVersion callback.  Added also a function
	  silc_ske_set_callbacks that is now used to set all SKE
	  callbacks.  The callback functions are not given to
	  the SKE functions anymore, but this function is used to
	  set the callbacks.

	* Fixed the WIN32 DLL generation in lib/Makefile.am.pre.

	* Added `silc_version' argument to the silc_client_alloc
	  to define the version of the application for the library.
	  The library will use the version string to compare it
	  against the remote host's (usually a server) version
	  string.  Affected file lib/silcclient/silcapi.h

	* Added the KE protocol context to Key Agreement context
	  in client library so that we can abort the SKE if it
	  is in process when we get timeout.  Affected file is
	  lib/silcclient/client_keyagr.c.

	* Do not resolve the client ID forever if it returns in the
	  first time that such client does not exist.  This was done
	  for example with private message.  Affected file is