@@ -1,3 +1,13 @@
+Wed Jun 27 22:24:47 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* /WHOIS without arguments shows client's own information.
+	  Affected file lib/silcclient/command.c.
+
+	* Changed PING to not accept any arguments.  The specs
+	  says that client can ping only the connected server so
+	  requiring an argument is not needed.  Affected file is
+	  lib/silcclient/command.c.
+
 Wed Jun 27 00:10:33 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed a fatal bug in private message sending and reception
